--- a/app/index.html
+++ b/app/index.html
@@ -11,9 +11,7 @@
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
 
-<!--  <link rel="icon" href="./favicon.ico" />-->
-<!--  <link rel="stylesheet" href="./css/style.css">-->
-  <title>React.js Boilerplate</title>
+  <title>React.js client-space</title>
 </head>
 
 <body>
